--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined');
 
 body {
     font-family: 'Noto Sans Thai', sans-serif;
+}
+
+body.dark {
+    background-color: #121212;
+    color: #ffffff;
 }
